accordion missing border fix

--- a/scss/components/accordion.scss
+++ b/scss/components/accordion.scss
@@ -13,6 +13,7 @@
         > .content {
             padding: $spacer;
             display: none;
+            border-top: $component-border;
         }
 
         & + div {
